# claude-code-config

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pc-refactor.md  settings.json  settings.windows.json  statusline.ps1  todo-ADR-111-phase2.md  ways.json
.github/workflows/: build-way-embed.yml  build-ways.yml  pr-test-windows.yml  upstream-sync.yml  way-match.yml
commands/: governance.md  ways-tests.md  ways.md
docs/: README.md  WINDOWS-HOOKS-MAINTENANCE.md  architecture.md  hooks-and-ways.md  nested-ways-exploration.md  windows-refactoring-assessment.md  windows-setup.md
docs/architecture/: INDEX.md
docs/hooks-and-ways/: README.md  ai.md  cloud.md  context-decay-formal-foundations.md  context-decay.md  devops.md  enterprise.md  extending.md  itops.md  macros.md  matching.md  mcp.md  meta.md  provenance.md  rationale.md  research.md  scoring-and-testing.md  sysadmin.md
docs/images/: generate-decay-diagrams.py
governance/: README.md  governance.sh  provenance-scan.py  provenance-verify.sh
hooks/: check-config-updates.ps1  check-config-updates.sh  hooks.json  list-tracking-files.sh  refresh-claude-md.ps1
scripts/: ClaudeConfigManager.psm1  Sync-Upstream.ps1  context-usage.sh  install.sh
tests/: README.md  progressive-disclosure-test.md  way-activation-test.md
tools/: claude-projects  migrate-provenance.py  way-tree-analyze.sh
tools/way-embed/: CMakeLists.txt  Makefile  RELEASE.md  calibrate.sh  compare-engines.sh  cosmocc-toolchain.cmake  download-binary.sh  download-model.sh  test-embedding.sh  way-embed.cpp
(+175 files in other folders)
